@@ -2339,9 +2339,6 @@ EXTERN const char *	TclTomMathInitializeStubs (Tcl_Interp *interp,
 
 EXTERN void		Tcl_Main (int argc, char **argv,
 				Tcl_AppInitProc *appInitProc);
-EXTERN void		Tcl_SetStartupScript(Tcl_Obj *path,
-				const char *encoding);
-EXTERN Tcl_Obj *	Tcl_GetStartupScript(const char **encodingPtr);
 EXTERN const char *	Tcl_PkgInitStubsCheck (Tcl_Interp *interp,
 				const char *version, int exact);
 #if defined(TCL_THREADS) && defined(USE_THREAD_ALLOC)
